@@ -1,3 +1,10 @@
+2010-09-08  Tom Tromey  <tromey@redhat.com>
+
+	Revert:
+	2010-09-01  Tom Tromey  <tromey@redhat.com>
+	* dwarf2read.c, gdbtypes.c, psymtab.c, symfile.h, symtab.c,
+	symtab.h: Revert earlier change.
+
 2010-09-09  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* psymtab.c (add_psymbol_to_bcache): Initialize
